crates/config/tests/snapshots/block_string_gen_folded_strip_simple_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-strip-simple-eof

## Input

```mical
key >-
  a
  b

```

## JSON

```json
{
  "key": "a b"
}
```

vim:ft=markdown
