crates/config/tests/snapshots/block_string_gen_folded_strip_simple_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-folded-strip-simple-eof-nonl

## Input

```mical
key >-
  a
  b
```

## JSON

```json
{
  "key": "a b"
}
```

vim:ft=markdown
