crates/config/tests/snapshots/block_string_gen_literal_clip_simple_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-clip-simple-dedent

## Input

```mical
key |
  a
  b
end marker

```

## JSON

```json
{
  "key": "a\nb\n",
  "end": "marker"
}
```

vim:ft=markdown
