crates/config/tests/snapshots/block_string_gen_literal_clip_simple_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-clip-simple-eof

## Input

```mical
key |
  a
  b

```

## JSON

```json
{
  "key": "a\nb\n"
}
```

vim:ft=markdown
