crates/config/tests/snapshots/block_string_gen_literal_clip_tab_content_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-clip-tab-content-eof

## Input

```mical
key |
  x	y
  	z

```

## JSON

```json
{
  "key": "x\ty\n\tz\n"
}
```

vim:ft=markdown
